# modern_cpp_web_app

homework_3/: CMakeLists.txt  create_image_browser.cpp  html_writer.cpp  image_browser.cpp  main.cpp
homework_3/web_app/: test.html
